# ArchonAI

./: .gitignore  README.md  docker-compose.yml  page.tsx.bk
backend/: .env.example  Dockerfile  main.py  pyproject.toml  requirements.txt  test_tech_recommendations.py  verify_security.py
backend/app/api/: api.py
backend/app/api/endpoints/: auth.py  github.py  repositories.py
backend/app/api/v1/endpoints/: reports.py
backend/app/core/: analyzer.py  brain.py  celery_app.py  recommender.py  reporter.py
backend/app/db/: session.py
backend/app/models/: repository.py
backend/app/schemas/: repository.py
backend/app/worker/: tasks.py
frontend/: Dockerfile  package-lock.json
frontend/app/: page.tsx
lib_bk/: api.ts
