[project]
name = "archon-backend"
version = "0.1.0"
description = "Backend for ArchonAI"
authors = [
    {name = "User",email = "user@example.com"}
]
requires-python = "^3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.29.0",
    "celery>=5.3.6",
    "redis>=5.0.1",
    "python-dotenv>=1.0.1",
    "groq>=1.0.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
